--- a/style.css
+++ b/style.css
@@ -55,12 +55,16 @@ a {
     color: #e5e7eb;
 }
 
-.sign-up {
-    border: none;
+.hero-button, .cta-button {
     border-radius: 8px;
-    background-color: #3882F6;
     padding: 8px 16px;
     width: 100px;
+    height: 35px;
+}
+
+.hero-button {
+    border: none;
+    background-color: #3882F6;
 }
 
 .koala {
@@ -112,6 +116,35 @@ a {
 }
 
 .quote-attribution {
+    margin: 8px;
     font-weight: 700;
     text-align: right;
+}
+
+.cta {
+    background-color: #3882F6;
+    padding: 30px 50px;
+    margin: 30px 50px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cta-header {
+    font-weight: bold;
+    color: #F9FAF8;
+}
+.cta-secondary-text {
+    margin: 5px 0;
+    font-size: 14px;
+    color: #e5e7eb;
+}
+
+.cta-button{
+    background-color: transparent;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #F9FAF8;
+    color: #F9FAF8;
 }
